# ChangeLog for dev-embedded/sdcc
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/sdcc/ChangeLog,v 1.26 2006/04/27 17:17:03 calchan Exp $

*sdcc-2.5.0_p20060423 (27 Apr 2006)

  27 Apr 2006; Denis Dupeyron <calchan@gentoo.org>
  +sdcc-2.5.0_p20060423.ebuild:
  Closing bug #85467. New snapshot (Microchip PIC support), cleanups, use of
  boehm-gc, documentation fix.

  03 Sep 2005; Daniel Black <dragonheart@gentoo.org> sdcc-2.5.0.ebuild:
  qa fixes

  28 Jul 2005; Daniel Black <dragonheart@gentoo.org>
  -sdcc-2.4.0_p20041215.ebuild, sdcc-2.5.0.ebuild,
  -sdcc-2.5.0_p20050522.ebuild:
  x86 stable and old version removal

*sdcc-2.5.0_p20050522 (23 May 2005)
*sdcc-2.5.0 (23 May 2005)

  23 May 2005; Daniel Black <dragonheart@gentoo.org>
  -sdcc-2.4.0_p20040927.ebuild, +sdcc-2.5.0.ebuild,
  +sdcc-2.5.0_p20050522.ebuild:
  Version bumps

  21 Apr 2005; Simon Stelling <blubb@gentoo.org>
  sdcc-2.4.0_p20040927.ebuild:
  stable on amd64

*sdcc-2.4.0_p20041215 (16 Dec 2004)

  16 Dec 2004; Daniel Black <dragonheart@gentoo.org>
  -sdcc-2.4.0_p20040716.ebuild, sdcc-2.4.0_p20040927.ebuild,
  +sdcc-2.4.0_p20041215.ebuild:
  changed make DESTDIR=${D} to make... install which kinda helps. Thanks for bug
  #74611 by Stefan Nickl <snickl@snickl.freaks.de> for bringing it to my
  attention

*sdcc-2.4.0_p20040927 (28 Sep 2004)

  28 Sep 2004; Daniel Black <dragonheart@gentoo.org> sdcc-2.4.0.ebuild,
  -sdcc-2.4.0_p20040606.ebuild, sdcc-2.4.0_p20040716.ebuild,
  sdcc-2.4.0_p20040908.ebuild, -sdcc-2.4.0_p20040908.ebuild:
  Version bump/cleanout. added RDEPEND=!dev-embedded/sdcc-cvs. Changed einstall
  to make DESTDIR=${D}

*sdcc-2.4.0_p20040908 (12 Sep 2004)

  12 Sep 2004; Daniel Black <dragonheart@gentoo.org>
  sdcc-2.4.0_p20040716.ebuild, +sdcc-2.4.0_p20040908.ebuild:
  version bump, x86 stable

*sdcc-2.4.0_p20040716 (18 Jul 2004)

  18 Jul 2004; Daniel Black <dragonheart@gentoo.org>