@@ -1,8 +1,42 @@
-MD5 c90ae31f451800df221d312699d0c2e9 ChangeLog 4446
-MD5 bfc177a29ceb52dfa8883108634d1e7e files/digest-sdcc-2.4.0 63
-MD5 d24d389e60331ef6cdb454ee3d8b440c files/digest-sdcc-2.5.0 63
-MD5 04cb4af4996e9e93be648e62c309e058 files/digest-sdcc-2.5.0_p20060423 140
-MD5 7d36efc2d3cf66fe798832feb7034d92 metadata.xml 254
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST sdcc-2.4.0.tar.gz 3021296 RMD160 807aaa5166e143d3793a66b620ccde40d0c83260 SHA256 45039e693f6b8c31116df5aba1ee351c64824b724ba8bf62f8d9e5963dba2204 size 3021296
+DIST sdcc-2.5.0.tar.gz 3570993 RMD160 b327742439b1ec4c3fb6aae5f090fc6c46308678 SHA256 138d2e59569f76f1a5d35bd5d85e7006eeebc4f48cd3dac902e2824ed50c3d80 size 3570993
+DIST sdcc-src-20060423.tar.gz 4127523 RMD160 59860096fd1bd7a37f7a7de690688d3ce18f2e88 SHA256 70b82b9326729aa5eb5dba80f351ec77703bf2a43f17eac66f93107d10662492 size 4127523
+EBUILD sdcc-2.4.0.ebuild 1032 RMD160 c28b307a994b7acfcdc46e6f1ea860c7c9d0db36 SHA1 5fac5c5e3952b929c0438a30914dc3b4be6efa17 SHA256 462e277fde79c0c1f0c72a5be8f19be4b4b4b9d30445600f5d9df774f641c12c size 1032
 MD5 e85f3ce84504295db28455e101342da4 sdcc-2.4.0.ebuild 1032
+RMD160 c28b307a994b7acfcdc46e6f1ea860c7c9d0db36 sdcc-2.4.0.ebuild 1032
+SHA256 462e277fde79c0c1f0c72a5be8f19be4b4b4b9d30445600f5d9df774f641c12c sdcc-2.4.0.ebuild 1032
+EBUILD sdcc-2.5.0.ebuild 1061 RMD160 3ad97d405f79067b9011696540cc41f0f76bfb2e SHA1 2a6e2acfc542078d2958663cdd7f5b92018754c1 SHA256 05f80342ee312cee350b604485048fbc18c47d44007b5ee303514894a4b7975e size 1061
 MD5 66a6edf136410cbb8cced22ca2d0e94b sdcc-2.5.0.ebuild 1061
-MD5 b2031f6015514d257e90b27ae0f766f8 sdcc-2.5.0_p20060423.ebuild 1317
+RMD160 3ad97d405f79067b9011696540cc41f0f76bfb2e sdcc-2.5.0.ebuild 1061
+SHA256 05f80342ee312cee350b604485048fbc18c47d44007b5ee303514894a4b7975e sdcc-2.5.0.ebuild 1061
+EBUILD sdcc-2.5.0_p20060423.ebuild 1334 RMD160 1d50738a8806463c19605886f5b711ed6f28d9d6 SHA1 7ef7dd5ea1df3598361f6ad51e564ef704a1c407 SHA256 6665f3f9c17c1e79fcd6c5810bdc4c93079aeb942c33da6c06439ed5093bbd62 size 1334
+MD5 5377ddaf999fb669cbe23539021e110d sdcc-2.5.0_p20060423.ebuild 1334
+RMD160 1d50738a8806463c19605886f5b711ed6f28d9d6 sdcc-2.5.0_p20060423.ebuild 1334
+SHA256 6665f3f9c17c1e79fcd6c5810bdc4c93079aeb942c33da6c06439ed5093bbd62 sdcc-2.5.0_p20060423.ebuild 1334
+MISC ChangeLog 4586 RMD160 3166d7b661b5d014b5a19bdfe6c4ff297ad9ac2d SHA1 f80bb9f7e3b6e1a0ad4ded9054d4c2352e5aa94d SHA256 e2c912a55c8113b22bfdb5c356fb4de93921d19297bb64eaf0136dd2f612f838 size 4586
+MD5 4807e3fec2cb9abbb0340a29f0489c50 ChangeLog 4586
+RMD160 3166d7b661b5d014b5a19bdfe6c4ff297ad9ac2d ChangeLog 4586
+SHA256 e2c912a55c8113b22bfdb5c356fb4de93921d19297bb64eaf0136dd2f612f838 ChangeLog 4586
+MISC metadata.xml 254 RMD160 7856e302b1d24ec747bc43ac3c05c0df38b05871 SHA1 bac116baa27e4c966d417c0ccb61599b1c916998 SHA256 7bce0fad36130ca9242e4a9b81ef87eff434d282ddaa3a31b148e3e8ffeff75c size 254
+MD5 7d36efc2d3cf66fe798832feb7034d92 metadata.xml 254
+RMD160 7856e302b1d24ec747bc43ac3c05c0df38b05871 metadata.xml 254
+SHA256 7bce0fad36130ca9242e4a9b81ef87eff434d282ddaa3a31b148e3e8ffeff75c metadata.xml 254
+MD5 92ae80c03a5f8cbe4abc615f411885c8 files/digest-sdcc-2.4.0 235
+RMD160 acac2dc1126526f66ca0d951893ccf029678b9b0 files/digest-sdcc-2.4.0 235
+SHA256 c6cbe2a69f8acc6485995b7f5eb38a860fed217d94cae8f5b5bac3a842355b1c files/digest-sdcc-2.4.0 235
+MD5 0303d254102563e5c5d9e4a7552dbd9c files/digest-sdcc-2.5.0 235
+RMD160 f84ee44fc22f41bc486ffba4712a8dbe64036133 files/digest-sdcc-2.5.0 235
+SHA256 3383a5414ce8beffe1c6296ba9deb15f7e48f767548485b61122939f2ce2eadd files/digest-sdcc-2.5.0 235
+MD5 bbde1fa010d852651ebed1a209389f54 files/digest-sdcc-2.5.0_p20060423 256
+RMD160 f271e4f3433c065de0fc519e1f0dfe3e9bf0d679 files/digest-sdcc-2.5.0_p20060423 256
+SHA256 22c6e542979b15629169de4c759d05244542b78188ee4b7d197cb1404181efc7 files/digest-sdcc-2.5.0_p20060423 256
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.3-ecc0.1.6 (GNU/Linux)
+
+iD8DBQFEV+xomdTrptrqvGERAvzoAJ9c3aO/vnZJ6kpKzSl9aNVwb7IW0ACdHiWK
+huuDZC6t3WwWNX7O0PBk7Bg=
+=HsSz
+-----END PGP SIGNATURE-----
