@@ -1,1 +1,3 @@
 MD5 ef959381f292d8857d8679f92a71582d sdcc-2.4.0.tar.gz 3021296
+RMD160 807aaa5166e143d3793a66b620ccde40d0c83260 sdcc-2.4.0.tar.gz 3021296
+SHA256 45039e693f6b8c31116df5aba1ee351c64824b724ba8bf62f8d9e5963dba2204 sdcc-2.4.0.tar.gz 3021296
