@@ -1,1 +1,3 @@
 MD5 c572e7842fe36348f5b2972c1025a75a sdcc-2.5.0.tar.gz 3570993
+RMD160 b327742439b1ec4c3fb6aae5f090fc6c46308678 sdcc-2.5.0.tar.gz 3570993
+SHA256 138d2e59569f76f1a5d35bd5d85e7006eeebc4f48cd3dac902e2824ed50c3d80 sdcc-2.5.0.tar.gz 3570993
