@@ -1,2 +1,3 @@
-MD5 6093d47f95dff13b06e8be23f4bbba06 sdcc-doc-20060423.tar.gz 1024511
 MD5 8b352ddb3d33d49c001f5e0fcab1ac21 sdcc-src-20060423.tar.gz 4127523
+RMD160 59860096fd1bd7a37f7a7de690688d3ce18f2e88 sdcc-src-20060423.tar.gz 4127523
+SHA256 70b82b9326729aa5eb5dba80f351ec77703bf2a43f17eac66f93107d10662492 sdcc-src-20060423.tar.gz 4127523
