@@ -1,18 +1,19 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/sdcc/sdcc-2.5.0_p20060423.ebuild,v 1.1 2006/04/27 17:17:03 calchan Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/sdcc/sdcc-2.5.0_p20060423.ebuild,v 1.2 2006/05/02 23:31:44 dragonheart Exp $
 
 inherit eutils
 
 MY_PV=${PV/*_p/}
 DESCRIPTION="Small device C compiler (for various microprocessors)."
 HOMEPAGE="http://sdcc.sourceforge.net/"
-SRC_URI="http://sdcc.sourceforge.net/snapshots/sdcc-src/${PN}-src-${MY_PV}.tar.gz
-	doc? ( http://sdcc.sourceforge.net/snapshots/docs/${PN}-doc-${MY_PV}.tar.gz )"
+SRC_URI="http://sdcc.sourceforge.net/snapshots/sdcc-src/${PN}-src-${MY_PV}.tar.gz"
+#	doc? ( http://sdcc.sourceforge.net/snapshots/docs/${PN}-doc-${MY_PV}.tar.gz )"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86 ~ppc ~amd64"
+IUSE="doc"
 IUSE="doc"
 
 DEPEND=">=dev-embedded/gputils-0.13.2
